testdata/result/ddl/!bad_alter_table_add_column.sql.txt
--- !bad_alter_table_add_column.sql
alter table foo add column baz string(max) null
--- Error
syntax error: testdata/input/ddl/!bad_alter_table_add_column.sql:1:44: expected token: <eof>, but: NULL
  1|  alter table foo add column baz string(max) null
   |                                             ^~~~


--- AST
&ast.AlterTable{
  Name: &ast.Path{
    Idents: []*ast.Ident{
      &ast.Ident{
        NamePos: 12,
        NameEnd: 15,
        Name:    "foo",
      },
    },
  },
  TableAlteration: &ast.AddColumn{
    Add:    16,
    Column: &ast.ColumnDef{
      Null: -1,
      Name: &ast.Ident{
        NamePos: 27,
        NameEnd: 30,
        Name:    "baz",
      },
      Type: &ast.SizedSchemaType{
        NamePos: 31,
        Rparen:  41,
        Name:    "STRING",
        Max:     true,
      },
      Hidden: -1,
    },
  },
}

--- SQL
ALTER TABLE foo ADD COLUMN baz STRING(MAX)
